--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
         <div class="container">
             <h1 class="h3">Biografía Emily Weiss</h1>
             <nav>
-                <a href="index.html" class="nav-link">Inicio</a>
-                <a href="biografias.html" class="nav-link">Biografías</a>
-                <a href="contacto.html" class="nav-link">Contacto</a>
+                <a href="principal.html" class="nav-link">Inicio</a>
+                <a href="#bio">Biografías</a>
+                <a href="#ld" class="nav-link">logros destacados</a>
+
             </nav>
         </div>
     </header>
 
     <div class="hero">
-        <img src="imagenes/emily weiss 2.png" alt="romina">
+        <img src="imagenes/emily weiss 2.png" alt="Emily Weiss">
         <h2 class="display-4">Emily Weiss</h2>
         <p class="lead">Fundadora de la marca Glossier y empresaria</p>
     </div>
 
-
-    <div class="biografia">
+    
+    <div  class="biografia" id="bio" >
         <div class="container">
             <h3>Biografía</h3>
             <p>Fecha de nacimiento:19 de mayo de 1985 en el estado de Connecticut, EE. UU.</p>
@@ -38,7 +39,7 @@
     </div>
 
 
-    <div class="logros">
+    <div class="logros" id="ld">
         <div class="container">
             <h3 class="mb-4">Logros Destacados</h3>
             <div class="row">
@@ -72,7 +73,7 @@
 
     <footer>
         <p>Contacto: <a href="alromi353@gmail.com">alromi353@gmail.com</a></p>
-        <p>&copy;Sí</p>
+        <p>&copy;Realizada por: Romina Troncoso</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
